--- a/project/project-core/src/main/webapp/documents/warehouse/externalOutgoing.xhtml
+++ b/project/project-core/src/main/webapp/documents/warehouse/externalOutgoing.xhtml
@@ -25,7 +25,10 @@
 							<div class="col-xs-12">
 								<div class="box">
 									<div class="box-header">
-										<h3 class="box-title">Wydanie zewnętrzne (WZ)</h3>
+										<h3 class="page-header col-xs-12">
+											Wydanie zewnętrzne (WZ) : WZ1/12/2014
+											<small class="pull-right">Data: 2/10/2014</small>
+										</h3>
 									</div>
 									<div class="box-body">
 										<h:form>
