--- a/project/project-core/src/main/webapp/documents/warehouse/internalIncoming.xhtml
+++ b/project/project-core/src/main/webapp/documents/warehouse/internalIncoming.xhtml
@@ -25,8 +25,11 @@
 							<div class="col-xs-12">
 								<div class="box">
 									<div class="box-header">
-										<h3 class="box-title">Przyjęcie wewnętrzne (PW)</h3>
-									</div>
+										<h3 class="page-header col-xs-12">
+											Przyjęcie wewnętrzne (PW)
+											<small class="pull-right">Data: 2/10/2014</small>
+										</h3>
+									</div>									
 									<div class="box-body">
 										<h:form>
 											<cc:internalDocument />
