--- a/project/project-core/src/main/webapp/documents/warehouse/internalIncoming.xhtml
+++ b/project/project-core/src/main/webapp/documents/warehouse/internalIncoming.xhtml
@@ -32,7 +32,7 @@
 									</div>									
 									<div class="box-body">
 										<h:form>
-											<cc:internalDocument />
+											<cc:internalDocument controller="#{internalInvoiceService}"/>
 											<p:spacer style="height : 10px"/>
 											<cc:buttonBox />
 										</h:form>
