Dodanie podstawowej kontroli do okien

--- a/project/project-core/src/main/webapp/documents/warehouse/externalIncoming.xhtml
+++ b/project/project-core/src/main/webapp/documents/warehouse/externalIncoming.xhtml
@@ -32,9 +32,9 @@
 									</div>
 									<div class="box-body">
 										<h:form>
-											<cc:externalDocument />
+											<cc:externalDocument controller="#{externalInvoiceController}" />
 											<p:spacer style="height : 10px"/>
-											<cc:buttonBox />
+											<cc:buttonBox controller="#{externalInvoiceController}"/>
 										</h:form>
 									</div>
 								</div>
