--- a/project/project-core/src/main/webapp/documents/warehouse/internalIncoming.xhtml
+++ b/project/project-core/src/main/webapp/documents/warehouse/internalIncoming.xhtml
@@ -26,15 +26,16 @@
 								<div class="box">
 									<div class="box-header">
 										<h3 class="page-header col-xs-12">
-											Przyjęcie wewnętrzne (PW)
-											<small class="pull-right">Data: 2/10/2014</small>
+											Przyjęcie wewnętrzne (PW) :  #{internalInvoiceController.sourceObject.symbol}
+											<small class="pull-right">Data: #{internalInvoiceController.currentDate}</small>
 										</h3>
 									</div>									
 									<div class="box-body">
 										<h:form>
-											<cc:internalDocument controller="#{internalInvoiceService}"/>
+
+											<cc:internalDocument controller="#{internalInvoiceController}"/>
 											<p:spacer style="height : 10px"/>
-											<cc:buttonBox />
+											<cc:buttonBox controller="#{internalInvoiceController}"/>
 										</h:form>
 									</div>
 								</div>
