--- a/project/project-core/src/main/webapp/documents/warehouse/externalOutgoing.xhtml
+++ b/project/project-core/src/main/webapp/documents/warehouse/externalOutgoing.xhtml
@@ -5,7 +5,8 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:cc="http://java.sun.com/jsf/composite/components">
+	xmlns:cc="http://java.sun.com/jsf/composite/components"
+	xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 
 	<h:body>
 		<ui:composition template="../../layout/main-template.xhtml">
@@ -32,9 +33,19 @@
 									</div>
 									<div class="box-body">
 										<h:form>
-											<cc:externalDocument controller="#{externalInvoiceController}" />
-											<p:spacer style="height : 10px"/>
-											<cc:buttonBox controller="#{externalInvoiceController}"/>
+											<ui:param name="visible" value="#{invoiceGoodListController.visible}" />
+											<c:if test="#{visible}" >
+												<cc:externalDocument controller="#{externalInvoiceController}" />
+												<p:spacer style="height : 10px"/>
+												<cc:invoiceGoodList controller="#{invoiceGoodListController}" />
+												<p:spacer style="height : 10px"/>
+												<cc:internalDocument controller="#{externalInvoiceController}" />
+												<p:spacer style="height : 10px"/>
+												<cc:buttonBox controller="#{externalInvoiceController}"/>
+											</c:if>
+											<c:if test="#{not visible}" >
+												<cc:chooseGoodList controller="#{goodListController}"/>
+											</c:if>
 										</h:form>
 									</div>
 								</div>
